--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,6 +10,8 @@
   <link type="text/css" rel="stylesheet" href="/assets/css/style.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Home Page</title>
+  <script type="text/javascript" src="/materialize/js/materialize.min.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 
 <body>
@@ -18,14 +20,14 @@
     <div class="nav-wrapper">
       <a href="#" class="brand-logo">Kids these days</a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><a href="sass.html">Sass</a></li>
-        <li><a href="badges.html">Components</a></li>
-        <li><a href="collapsible.html">JavaScript</a></li>
+        <li><a href="/">Home</a></li>
+        <li><a href="/profile">Profile</a></li>
       </ul>
     </div>
     </div>
   </nav>
   <div class="container wider-container">
+    <br>
     {{{body}}}
   </div>
   <footer class="page-footer">
@@ -53,7 +55,6 @@
       </div>
     </div>
   </footer>
-  <script type="text/javascript" src="/materialize/js/materialize.min.js"></script>
 </body>
 
 </html>
