--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -22,6 +22,7 @@
       <ul id="nav-mobile" class="right hide-on-med-and-down">
         <li><a href="/">Home</a></li>
         <li><a href="/profile">Profile</a></li>
+        <li><a href="/api/sessions_logout">Logout</a></li>
       </ul>
     </div>
     </div>
