--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,6 +12,8 @@
   <title>Home Page</title>
   <script type="text/javascript" src="/materialize/js/materialize.min.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://cdn.auth0.com/js/auth0/9.10/auth0.min.js"></script>
+  <script src="/js/app.js"></script>
 </head>
 
 <body>
