--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,6 +8,10 @@
   <!--Import materialize.css-->
   <link type="text/css" rel="stylesheet" href="/materialize/css/materialize.min.css" media="screen,projection" />
   <link type="text/css" rel="stylesheet" href="/assets/css/style.css" />
+  <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
+  <link href="https:////cdn.quilljs.com/1.3.6/quill.bubble.css" rel="stylesheet">
+  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.6/styles/default.min.css">
+  <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.6/highlight.min.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Home Page</title>
 </head>
@@ -15,14 +19,14 @@
 <body>
   <nav>
     <div class="container wider-container">
-    <div class="nav-wrapper">
-      <a href="#" class="brand-logo">Kids these days</a>
-      <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><a href="sass.html">Sass</a></li>
-        <li><a href="badges.html">Components</a></li>
-        <li><a href="collapsible.html">JavaScript</a></li>
-      </ul>
-    </div>
+      <div class="nav-wrapper">
+        <a href="#" class="brand-logo">Kids these days</a>
+        <ul id="nav-mobile" class="right hide-on-med-and-down">
+          <li><a href="sass.html">Sass</a></li>
+          <li><a href="badges.html">Components</a></li>
+          <li><a href="collapsible.html">JavaScript</a></li>
+        </ul>
+      </div>
     </div>
   </nav>
   <div class="container wider-container">
