--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -22,7 +22,7 @@
     <div class="nav-wrapper">
       <a href="#" class="brand-logo">Kids these days</a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><a href="/">Home</a></li>
+        <li><a href="/posts">Posts</a></li>
         <li><a href="/profile">Profile</a></li>
         <li><a href="/api/sessions_logout">Logout</a></li>
       </ul>
