--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,51 +1,56 @@
-<div class="row">
-    <div class="input-field col s12">
-        <input id="username" type="text" class="validate" value="{{user.username}}">
-        <label for="username">Username</label>
+<div id="home">
+  <div class="row">
+    <div class="col s4">
+      <div class="card medium">
+        <div class="card-image waves-effect waves-block waves-light">
+          <img class="activator" src="https://www.hoglezoo.org/wp-content/uploads/2012/11/MeetAnimals.jpg">
+        </div>
+        <div class="card-content">
+          <span class="card-title activator grey-text text-darken-4">Card Title<i
+              class="material-icons right">more_vert</i></span>
+          <p><a href="#">This is a link</a></p>
+        </div>
+        <div class="card-reveal">
+          <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
+          <p>Here is some more information about this product that is only revealed once clicked on.</p>
+        </div>
+      </div>
+    </div>
+    <div class="col s4">
+      <div class="card medium">
+        <div class="card-image waves-effect waves-block waves-light">
+          <img class="activator"
+            src="http://cdn.mntm.me/46/a9/b3/Utah-with-Kids-An-Insiders-Guide-46a9b333b0a74ec8bdcc6a800e334e64.jpg">
+        </div>
+        <div class="card-content">
+          <span class="card-title activator grey-text text-darken-4">Card Title<i
+              class="material-icons right">more_vert</i></span>
+          <p><a href="#">This is a link</a></p>
+        </div>
+        <div class="card-reveal">
+          <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
+          <p>Here is some more information about this product that is only revealed once clicked on.</p>
+        </div>
+      </div>
+    </div>
+    <div class="col s4">
+      <div class="card medium">
+        <div class="card-image waves-effect waves-block waves-light">
+          <img class="activator"
+            src="https://iheartcraftythings.com/wp-content/uploads/2016/05/button-fish-craft-2.jpg">
+        </div>
+        <div class="card-content">
+          <span class="card-title activator grey-text text-darken-4">Card Title<i
+              class="material-icons right">more_vert</i></span>
+          <p><a href="#">This is a link</a></p>
+        </div>
+        <div class="card-reveal">
+          <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
+          <p>Here is some more information about this product that is only revealed once clicked on.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 
-    </div>
-</div>
-<div class="row">
-    <div class="input-field col s12">
-        <input id="password" type="password" class="validate">
-        <label for="password">Password</label>
-    </div>
-</div>
-
-<button id="login-button" class="btn waves-effect waves-light">Login</button>
-<br />
-
-<div class="row">
-    <div class="input-field col s6">
-        <input id="new_firstname" type="text" class="validate" value="{{user.firstname}}">
-        <label for="new_firstname">First Name</label>
-    </div>
-    <div class="input-field col s6">
-        <input id="new_lastname" type="text" class="validate" value="{{user.lastname}}">
-        <label for="new_lastname">Last Name</label>
-    </div>
-</div>
-<div class="row">
-    <div class="input-field col s12">
-        <input id="new_username" type="text" class="validate" value="{{user.username}}">
-        <label for="new_username">Username</label>
-    </div>
-</div>
-<div class="row">
-    <div class="input-field col s12">
-        <input id="new_password" type="password" class="validate">
-        <label for="new_password">Password</label>
-    </div>
-</div>
-<div class="row">
-    <div class="input-field col s12">
-        <input id="new_email" type="email" class="validate" value="{{user.email}}">
-        <label for="new_email">Email</label>
-    </div>
-</div>
-<button id="new-button" class="btn waves-effect waves-light">Submit</button>
-<div class="row">
-    <h4>Or Login with Google</h4>
-    <button id="btn-login" class="btn waves-effect waves-light">Google-Login</button>
-</div>
-<script src="/js/index.js"></script>
+<script src="/js/posts.js"></script>
