--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -51,6 +51,6 @@
       </div>
     </div>
   </div>
-</div>
-
+  <script src="/js/index.js"></script>
 <script src="/js/posts.js"></script>
+</div>
