--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,21 +13,32 @@
   <script type="text/javascript" src="/materialize/js/materialize.min.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://cdn.auth0.com/js/auth0/9.10/auth0.min.js"></script>
-  <script src="/js/app.js"></script>
 </head>
 
 <body>
   <nav>
     <div class="container wider-container">
-    <div class="nav-wrapper">
-      <a href="#" class="brand-logo">Kids these days</a>
-      <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><a href="/">Home</a></li>
-        <li><a href="/profile">Profile</a></li>
-        <li><a href="/api/sessions_login">Login</a></li>
-        <li><a href="/api/sessions_logout">Logout</a></li>
-      </ul>
-    </div>
+      <div class="nav-wrapper">
+        <a href="#" class="brand-logo">Kids these days</a>
+        <ul id="nav-mobile" class="right hide-on-med-and-down">
+          <li><a href="/">Home</a></li>
+          <li><a href="/profile">Profile</a></li>
+          <!-- Modal Trigger -->
+          <a class="waves-effect waves-light btn modal-trigger" href="#modal1">Modal</a>
+
+          <!-- Modal Structure -->
+          <div id="modal1" class="modal">
+            <div class="modal-content">
+              <h4>Modal Header</h4>
+              <p>A bunch of text</p>
+            </div>
+            <div class="modal-footer">
+              <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>
+            </div>
+          </div>
+          <li><a href="/api/sessions_logout">Logout</a></li>
+        </ul>
+      </div>
     </div>
   </nav>
   <div class="container wider-container">
