--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,3 +1,14 @@
 .wider-container {
-    width: 90%;
+  width: 90%;
+}
+.page-footer {
+  position: static;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 64px;
+  padding: 0px;
+}
+body{
+  height: 700px !important;
 }
