--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,69 +17,59 @@
 </head>
 
 <body>
-  <div id="dropdown1" class="dropdown-content">
-    <div class="row">
-      <div class="input-field col s11">
-        <i class="material-icons prefix black-text">account_circle</i>
-        <input id="username" type="text" class="validate">
-        <label for="username">Username</label>
-      </div>
-      <div class="input-field col s11">
-        <i class="material-icons prefix black-text">security</i>
-        <input id="password" type="password" class="validate">
-        <label for="password">Password</label>
-      </div>
-      <div class="col s11 black-text valign-wrapper">
-        <a class="waves-effect waves-light btn right" id="login-button">Login</a>
-        <span class="right top">OR</span>
-        <a class="waves-effect waves-light btn right" href="/register">Register</a>
-      </div>
-    </div>
-  </div>
-  <nav>
-    <div class="container wider-container">
-      <div class="nav-wrapper">
-        <a href="#" class="brand-logo">Kids these days</a>
-        <ul id="nav-mobile" class="right hide-on-med-and-down">
-          {{#if user}}
-          <li><a href="/api/sessions_logout">Logout</a></li>
-          {{else}}
-          <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">Login</a></li>
-          {{/if}}
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-  <div class="container wider-container">
-    <br>
-    {{{body}}}
-  </div>
-  <footer class="page-footer">
-    <div class="container wider-container">
+  <div class="container-fluid">
+    <div id="dropdown1" class="dropdown-content">
       <div class="row">
-        <div class="col l6 s12">
-          <h5 class="white-text">Footer Content</h5>
-          <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+        <div class="input-field col s11">
+          <i class="material-icons prefix black-text">account_circle</i>
+          <input id="username" type="text" class="validate">
+          <label for="username">Username</label>
         </div>
-        <div class="col l4 offset-l2 s12">
-          <h5 class="white-text">Links</h5>
-          <ul>
-            <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
-            <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
-            <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
-            <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+        <div class="input-field col s11">
+          <i class="material-icons prefix black-text">security</i>
+          <input id="password" type="password" class="validate">
+          <label for="password">Password</label>
+        </div>
+        <div class="col s11 black-text valign-wrapper">
+          <a class="waves-effect waves-light btn right red" id="login-button">Login</a>
+          <span class="right top">OR</span>
+          <a class="waves-effect waves-light btn right red" href="/register">Register</a>
+        </div>
+      </div>
+    </div>
+    <nav>
+      <div class="container wider-container">
+        <div class="nav-wrapper">
+          <a href="#" class="brand-logo">Kids these days</a>
+          <ul id="nav-mobile" class="right hide-on-med-and-down">
+            {{#if user}}
+            <li><a href="/api/create_post">Create Activity</a></li>
+            <li><a href="/api/sessions_logout">Logout</a></li>
+            {{else}}
+            <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">Login</a></li>
+            {{/if}}
+            </li>
           </ul>
         </div>
       </div>
+    </nav>
+    <div class="container wider-container">
+      <br>
+      {{{body}}}
     </div>
-    <div class="footer-copyright">
+    <footer class="page-footer">
       <div class="container wider-container">
-        © 2014 Copyright Text
-        <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+        <div class="row">
+          <div class="col s12">
+            <ul>
+              <li><span class="right">Checkout our <a class="grey-text text-lighten-3"
+                    href="https://github.com/kids-these-days-uofu/project2">Github</a></span></li>
+            </ul>
+          </div>
+        </div>
       </div>
-    </div>
-  </footer>
+    </footer>
+  </div>
   <script type="text/javascript" src="/materialize/js/materialize.js"></script>
 </body>
 
