--- a/views/posts.handlebars
+++ b/views/posts.handlebars
@@ -6,110 +6,24 @@
 <br>
 <div id="home">
   <div class="row">
+    {{#each post}}
     <div class="col s4">
       <div class="card medium">
         <div class="card-image waves-effect waves-block waves-light">
           <img class="activator" src="https://www.hoglezoo.org/wp-content/uploads/2012/11/MeetAnimals.jpg">
         </div>
         <div class="card-content">
-          <span class="card-title activator grey-text text-darken-4">Card Title<i
+          <span class="card-title activator grey-text text-darken-4">{{this.title}}<i
               class="material-icons right">more_vert</i></span>
-          <p><a href="#">This is a link</a></p>
+          <a href="/api/edit_post">{{#if user}}<p>Edit Post</p>{{/if}}</a>
         </div>
         <div class="card-reveal">
-          <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-          <p>Here is some more information about this product that is only revealed once clicked on.</p>
+          <span class="card-title grey-text text-darken-4">{{this.title}}<i class="material-icons right">close</i></span>
+          <p>{{this.body}}</p>
         </div>
       </div>
     </div>
-    <div class="col s4">
-      <div class="card medium">
-        <div class="card-image waves-effect waves-block waves-light">
-          <img class="activator"
-            src="http://cdn.mntm.me/46/a9/b3/Utah-with-Kids-An-Insiders-Guide-46a9b333b0a74ec8bdcc6a800e334e64.jpg">
-        </div>
-        <div class="card-content">
-          <span class="card-title activator grey-text text-darken-4">Card Title<i
-              class="material-icons right">more_vert</i></span>
-          <p><a href="#">This is a link</a></p>
-        </div>
-        <div class="card-reveal">
-          <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-          <p>Here is some more information about this product that is only revealed once clicked on.</p>
-        </div>
-      </div>
-    </div>
-    <div class="col s4">
-      <div class="card medium">
-        <div class="card-image waves-effect waves-block waves-light">
-          <img class="activator"
-            src="https://iheartcraftythings.com/wp-content/uploads/2016/05/button-fish-craft-2.jpg">
-        </div>
-        <div class="card-content">
-          <span class="card-title activator grey-text text-darken-4">Card Title<i
-              class="material-icons right">more_vert</i></span>
-          <p><a href="#">This is a link</a></p>
-        </div>
-        <div class="card-reveal">
-          <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-          <p>Here is some more information about this product that is only revealed once clicked on.</p>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="row">
-    <div class="row">
-      <div class="col s4">
-        <div class="card medium">
-          <div class="card-image waves-effect waves-block waves-light">
-            <img class="activator" src="https://www.hoglezoo.org/wp-content/uploads/2012/11/MeetAnimals.jpg">
-          </div>
-          <div class="card-content">
-            <span class="card-title activator grey-text text-darken-4">Card Title<i
-                class="material-icons right">more_vert</i></span>
-            <p><a href="#">This is a link</a></p>
-          </div>
-          <div class="card-reveal">
-            <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-            <p>Here is some more information about this product that is only revealed once clicked on.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col s4">
-        <div class="card medium">
-          <div class="card-image waves-effect waves-block waves-light">
-            <img class="activator"
-              src="http://cdn.mntm.me/46/a9/b3/Utah-with-Kids-An-Insiders-Guide-46a9b333b0a74ec8bdcc6a800e334e64.jpg">
-          </div>
-          <div class="card-content">
-            <span class="card-title activator grey-text text-darken-4">Card Title<i
-                class="material-icons right">more_vert</i></span>
-            <p><a href="#">This is a link</a></p>
-          </div>
-          <div class="card-reveal">
-            <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-            <p>Here is some more information about this product that is only revealed once clicked on.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col s4">
-        <div class="card medium">
-          <div class="card-image waves-effect waves-block waves-light">
-            <img class="activator"
-              src="https://iheartcraftythings.com/wp-content/uploads/2016/05/button-fish-craft-2.jpg">
-          </div>
-          <div class="card-content">
-            <span class="card-title activator grey-text text-darken-4">Card Title<i
-                class="material-icons right">more_vert</i></span>
-            <p><a href="#">This is a link</a></p>
-          </div>
-          <div class="card-reveal">
-            <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-            <p>Here is some more information about this product that is only revealed once clicked on.</p>
-          </div>
-        </div>
-      </div>
-    </div>
+    {{/each}}
   </div>
 </div>
 
