--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -40,7 +40,7 @@
     <nav>
       <div class="container wider-container">
         <div class="nav-wrapper">
-          <a href="#" class="brand-logo">Kids these days</a>
+          <a href="/" class="brand-logo">Kids these days</a>
           <ul id="nav-mobile" class="right hide-on-med-and-down">
             {{#if user}}
             <li><a href="/api/create_post">Create Activity</a></li>
