--- a/views/newpost.handlebars
+++ b/views/newpost.handlebars
@@ -1,38 +1,38 @@
 <br>
 <div id="toolbar-container">
-        <span class="ql-formats">
-      <select class="ql-font"></select>
-      <select class="ql-size"></select>
-    </span>
-    <span class="ql-formats">
-      <button class="ql-bold"></button>
-      <button class="ql-italic"></button>
-      <button class="ql-underline"></button>
-      <button class="ql-strike"></button>
-    </span>
-    <span class="ql-formats">
-      <select class="ql-color"></select>
-      <select class="ql-background"></select>
-    </span>
-    <span class="ql-formats">
-      <button class="ql-blockquote"></button>
-      <button class="ql-code-block"></button>
-    </span>
-    <span class="ql-formats">
-      <button class="ql-list" value="ordered"></button>
-      <button class="ql-list" value="bullet"></button>
-      <button class="ql-indent" value="-1"></button>
-      <button class="ql-indent" value="+1"></button>
-    </span>
-    <span class="ql-formats">
-      <button class="ql-direction" value="rtl"></button>
-      <select class="ql-align"></select>
-    </span>
-    <span class="ql-formats">
-      <button class="ql-link"></button>
-      <button class="ql-image"></button>
-      <button class="ql-video"></button>
-    </span>
+  <span class="ql-formats">
+    <select class="ql-font"></select>
+    <select class="ql-size"></select>
+  </span>
+  <span class="ql-formats">
+    <button class="ql-bold"></button>
+    <button class="ql-italic"></button>
+    <button class="ql-underline"></button>
+    <button class="ql-strike"></button>
+  </span>
+  <span class="ql-formats">
+    <select class="ql-color"></select>
+    <select class="ql-background"></select>
+  </span>
+  <span class="ql-formats">
+    <button class="ql-blockquote"></button>
+    <button class="ql-code-block"></button>
+  </span>
+  <span class="ql-formats">
+    <button class="ql-list" value="ordered"></button>
+    <button class="ql-list" value="bullet"></button>
+    <button class="ql-indent" value="-1"></button>
+    <button class="ql-indent" value="+1"></button>
+  </span>
+  <span class="ql-formats">
+    <button class="ql-direction" value="rtl"></button>
+    <select class="ql-align"></select>
+  </span>
+  <span class="ql-formats">
+    <button class="ql-link"></button>
+    <button class="ql-image"></button>
+    <button class="ql-video"></button>
+  </span>
 </div>
 <div id="editor-container">
 </div>
@@ -46,32 +46,32 @@
 <br>
 
 <style>
-    #editor-container {
-        height: 375px;
-    }
+  #editor-container {
+    height: 375px;
+  }
 </style>
 <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
 <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script>
+{{post}}
+  $("#submitbutton").click(function () {
+    var rawhtml = quill.container.firstChild.innerHTML;
 
-    $("#submitbutton").click(function () {
-        var rawhtml = quill.container.firstChild.innerHTML;
+    var postdata = {
+      title: "testing123",
+      body: rawhtml,
+      UserId: 1
+    }
 
-        var postdata = {
-            title: "testing123",
-            body: rawhtml,
-            UserId: 1
-        }
+    $.post("api/posts", postdata).then()
 
-        $.post("api/posts", postdata).then()
+    console.log(quill.container.firstChild.innerHTML);
 
-        console.log(quill.container.firstChild.innerHTML);
+  });
+  
 
-    });
-
-
-    // Initialize editor with custom theme and modules
+  // Initialize editor with custom theme and modules
   var quill = new Quill('#editor-container', {
     modules: {
       syntax: true,
