--- a/views/posts.handlebars
+++ b/views/posts.handlebars
@@ -1,6 +1,5 @@
 {{#if user}}
-<h1>{{user.firstname}} {{user.lastname}}</h1>
-<h1>{{user.email}}</h1>
+<h4>Hello {{user.firstname}} {{user.lastname}}, Checkout or create some activities and get out there!!!</h4>
 {{/if}}
 <br>
 <br>
@@ -15,11 +14,14 @@
         <div class="card-content">
           <span class="card-title activator grey-text text-darken-4">{{this.title}}<i
               class="material-icons right">more_vert</i></span>
-          <a href="/api/edit_post">{{#if user}}<p>Edit Post</p>{{/if}}</a>
+          <a id="{{this.id}}" class="edit-link" href="/newpost">
+            <p>edit</p>
+          </a>
         </div>
         <div class="card-reveal">
-          <span class="card-title grey-text text-darken-4">{{this.title}}<i class="material-icons right">close</i></span>
-          <p>{{this.body}}</p>
+          <span class="card-title grey-text text-darken-4">{{this.title}}<i
+              class="material-icons right">close</i></span>
+          <p>{{{this.body}}}</p>
         </div>
       </div>
     </div>
