--- a/views/posts.handlebars
+++ b/views/posts.handlebars
@@ -10,7 +10,7 @@
     <div class="col s4">
       <div class="card medium">
         <div class="card-image waves-effect waves-block waves-light">
-          <a href="/posts/{{this.id}}""><img class="activator" src="https://www.hoglezoo.org/wp-content/uploads/2012/11/MeetAnimals.jpg"></a>
+          <a href="/posts/{{this.id}}""><img id="img{{this.id}}" class="activator" src=""></a>
         </div>
         <div class="card-content">
           <span class="card-title activator grey-text text-darken-4">{{this.title}}<i
