--- a/views/posts.handlebars
+++ b/views/posts.handlebars
@@ -9,21 +9,15 @@
     <div class="col s4">
       <div class="card medium">
         <div class="card-image waves-effect waves-block waves-light">
-          <a href="/posts/{{this.id}}"><img id="img{{this.id}}" class="activator" src=""></a>
+          <a href="/posts/{{this.id}}"><img id="img{{this.id}}" class="activator" src="assets/images/default.png"></a>
         </div>
         <div class="card-content">
-          <span class="card-title activator grey-text text-darken-4">{{this.title}}<i
-              class="material-icons right">more_vert</i></span>
+          <span class="card-title activator grey-text text-darken-4">{{this.title}}</span>
           <div id="edit{{this.id}}"class="edit-link" value="{{this.UserId}}">
             <a href="/editpost/{{this.id}}">
               <p>edit</p>
             </a>
           </div>
-        </div>
-        <div class="card-reveal">
-          <span class="card-title grey-text text-darken-4">{{this.title}}<i
-              class="material-icons right">close</i></span>
-          <p>{{{this.body}}}</p>
         </div>
       </div>
     </div>
