--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -1,1 +1,7 @@
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 {{{this.body.body}}}
+
+<script>
+    $(".ql-tooltip").remove()
+    $(".ql-editor").attr("contenteditable", "false")
+</script>
