--- a/views/posts.handlebars
+++ b/views/posts.handlebars
@@ -1,6 +1,6 @@
 {{#if user}}
 <div id="user-id" value="{{user.id}}">
-  <h4>Hello {{user.firstname}} {{user.lastname}}, Checkout or create some activities and get out there!!!</h4>
+  <h4 class="deep-orange-text text-accent-3">Hello {{user.firstname}} {{user.lastname}}, Checkout or create some activities and get out there!!!</h4>
 </div>
 {{/if}}
 <br>
@@ -14,17 +14,17 @@
           <a href="/posts/{{this.id}}"><img id="img{{this.id}}" class="activator" src=""></a>
         </div>
         <div class="card-content">
-          <span class="card-title activator grey-text text-darken-4">{{this.title}}<i
-              class="material-icons right">more_vert</i></span>
+          <span class="card-title activator deep-orange-text text-accent-3">{{this.title}}
+            <i class="material-icons right black-text">more_vert</i></span>
           {{#if belongs}}
           <a href="/editpost/{{this.id}}">
-            <p>edit</p>
+            <p class="black-text">edit</p>
           </a>
           {{/if}}
         </div>
         <div class="card-reveal">
-          <span class="card-title grey-text text-darken-4">{{this.title}}<i
-              class="material-icons right">close</i></span>
+          <span class="card-title deep-orange-text text-accent-3">{{this.title}}<i
+              class="material-icons right black-text">close</i></span>
           <p>{{{this.body}}}</p>
         </div>
       </div>
