fixing highlight on login

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -20,7 +20,7 @@
 <body>
   <div class="container-fluid white">
     <div id="dropdown1" class="dropdown-content">
-      <div class="row">
+      <div class="row" tabindex="a">
         <div class="input-field col s11">
           <i class="material-icons prefix deep-orange-text text-accent-3">account_circle</i>
           <input id="username" type="text">
