--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -6,10 +6,19 @@
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 64px;
   padding: 0px;
 }
 body{
   height: 700px !important;
 }
+/* override chrome auto complete style */
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus, 
+input:-webkit-autofill:active  {
+    -webkit-box-shadow: 0 0 0 30px white inset !important;
+}
 
+ nav i.material-icons {
+  font-size: 50px;
+}
