changed all buttons to have same color

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -45,8 +45,8 @@
     </div>
 </div>
 
-<button id="new-button" class="btn waves-effect waves-light">Submit</button>
-<a class="waves-effect waves-light btn" href="/">Cancel</a>
+<button id="new-button" class="btn waves-effect waves-light red lighten-1">Submit</button>
+<a class="waves-effect waves-light btn red lighten-1" href="/">Cancel</a>
 <br>
 <br>
 <script src="/js/profile.js"></script>
