--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -33,9 +33,9 @@
           <label for="password">Password</label>
         </div>
         <div class="col s11 black-text valign-wrapper">
-          <a class="waves-effect waves-light btn" id="login-button">Login</a>
+          <a class="waves-effect waves-light btn red lighten-1" id="login-button">Login</a>
           <span class="right top">OR</span>
-          <a class="waves-effect waves-light btn" href="/register">Register</a>
+          <a class="waves-effect waves-light btn red lighten-1" href="/register">Register</a>
         </div>
       </div>
     </div>
