--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -49,7 +49,7 @@
             {{#if user.id}}
             <li><a href="/api/create_post">Create Activity</a></li>
             <li><a href="/api/sessions_logout">Logout</a></li>
-            <li><a href="/profile">profile</a></li>
+            <li><a href="/profile">Profile</a></li>
             {{else}}
             <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">Login</a></li>
             {{/if}}
